test/errors/ubyte_neg1.ls

#OUTPUT
#Syntax Error: Negation invalid for this type.
# -> [13] ubyte x = -9
#
#END

#RET 0

extern func printf(s:str, ...)

func main -> int
    ubyte x = -9

    return 0
end

